--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,8 @@ author: Some Person
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Publications: "Publications"
+  Lab Members: "LabMembers"
 
 ################
 # --- Logo --- #
